# strip_tilp_nspire

./: ChangeLog  RELEASE  TODO  configure.ac
builder/: device.ui
help/: Manual_en.html
man/: Manpage.txt
po/: POTFILES  POTFILES.in  fr.gmo  fr.po  fr.po~  tilp2.pot  tilp2m.pot  tilp2s.pot
src/: Makefile.am  about.c  action.c  backup.c  calc_73.c  calc_82.c  calc_83.c  calc_84p.c  calc_85.c  calc_86.c  calc_89.c  calc_89t.c  calc_92.c  calc_nsp.c  calc_xx.c  charset.c  clist.c  clist.h  clist_rbm.c  clist_rbm.h  clock.c  cmd73.h  cmd82.c  cmd82.h  cmd85.c  cmd85.h  cmd89.c  cmd89.h  cmd92.c  cmd92.h  ctree.c  ctree.h  data_log.c  data_log.h  dboxes.c  dbus_pkt.c  device.c  dirlist.c  error.c  error.h  (+126 more)
src/bsd/: detect.c  detect.h  link_gry.c
src/linux/: detect.c  detect.h  ioports.c  link_gry.c  link_par.c  link_tie.c  link_usb.c  link_vti.c
src/macos/: detect.c  detect.h
src/win32/: detect.c  detect.h  dha.c  dha.h  ioports.c  ioports.h  link_gry.c  link_par.c  link_ser.c  link_tie.c  link_vti.c
